# hugin

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Dockerfile.ppc64le  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile.ppc64le  conda_amd64.txt  conda_ppc64le.txt  entrypoint.sh
docs/: watch.sh
docs/examples/: predict.yaml  predictv3.yaml  train.yaml
docs/examples/spacenet2/: sn2.yaml  sn2_predict.yaml  sn2_standardize.yaml  sn2_standardize_test.yaml
docs/source/: conf.py  index.rst  installation.rst  intro.rst  isprs_example.rst  spacenet_example.rst
docs/source/api/: hugin.core.rst  hugin.io.rst  hugin.postprocessing.rst  hugin.preprocessing.rst  hugin.rst  hugin.scene.rst  index.rst
etc/forestry/: forestry-s3-v2-sample-predict.yaml  forestry-s3-v2-sample.yaml  forestry-s3-v2.yaml  forestry-s3.yaml
etc/gcp/: gpu_1xk80.yaml  gpu_1xv100.yaml  gpu_1xv100_highmem.yaml  gpu_4xk80.yaml  gpu_4xv100.yaml  gpu_8xk80.yaml  gpu_8xv100.yaml  standard.yaml
etc/isprs_benchmark_example/: predict_isprs.yaml  train_isprs.yaml
etc/spacenet_roads_example/: train_spacenet.yaml
etc/usecases/s2-forestry/: predict_ftr_terrasigna.yaml  train_s2_forestry.yaml  train_terrasigna.yaml
src/hugin/: __init__.py
src/hugin/_data/: logging-config.yaml
src/hugin/engine/: core.py  keras.py  scene.py  skl.py
src/hugin/engine/v2/: model.py
src/hugin/io/: __init__.py  dataset_loaders.py  io_layer.py  loader.py  rio_dataset_loaders.py  scanners.py  zarr_loader.py
src/hugin/io/v2/: loader.py  tf.py
src/hugin/models/: __init__.py
src/hugin/models/skl/: StandardScaler.py
src/hugin/models/unet/: __init__.py  base.py  lunet.py  lunet2.py  lunet3.py  lunet4.py  lunet5.py  lunet6.py  lunet6mfix.py  lunet6mfix_rec_dropout.py  unet.py  unetv14.py  unetv15.py
src/hugin/postprocessing/: __init__.py  pixelwise.py
src/hugin/preprocessing/: __init__.py  augmentation.py  nadir_tools.py  rasterize.py  standardize.py
src/hugin/tools/: IOUtils.py  IOUtilsPy3.py  __init__.py  callbacks.py  cli.py  dir_to_stac.py  loss.py  predict.py  predictv2.py  predictv3.py  train.py  trainv2.py  utils.py  vectorize.py
temp/: ts-conf-lunet6-full-maskfix-set6.yaml
tests/: __init__.py  conftest.py  test_aug.py  test_basic_flow.py  test_dataset_loaders.py  test_io_layer.py  test_sklearn_standardizer.py
tests/config/: aug_test.yaml
tests/data/scanner_examples/: A_XYZ_1.txt  A_XYZ_2.txt  A_XYZ_3.txt  B_XYZ_1.txt  B_XYZ_2.txt  B_XYZ_3.txt  C_XYZ_1.txt  C_XYZ_2.txt  C_XYZ_3.txt
tools/: config.yaml  kb-job.py  sp.py
