[project]
name = "hugin"
dynamic = ["version"]
authors = [
    { name = "Marian Neagul", email="marian.neagul@e-uvt.ro" },
    { name = "Teodora Selea", email="teodora.selea@e-uvt.ro" },
    { name = "Gabriel Iuhasz", email="iuhasz.gabriel@e-uvt.ro" },
    { name = "Alexandru Munteanu", email="alexandru.munteanu@e-uvt.ro" }
]
maintainers = [
    { name = "Marian Neagul", email="marian.neagul@e-uvt.ro" },
    { name = "Alexandru Munteanu", email="alexandru.munteanu@e-uvt.ro" }
]
description = 'HuginEO - Machine Learning for Earth Observation experimentation tool'
readme = "README.md"
requires-python = ">=3.6"
license.file = "LICENSE.txt"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Scientific/Engineering :: GIS',
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
]
dependencies = [
    'tensorflow',
    'geojson',
    'rasterio',
    'scikit-image',
    'scipy',
    'geopandas',
    'Shapely',
    'Fiona',
    'backoff',
    'matplotlib',
    'scikit-learn',
    'tqdm',
    'numpy',
    'fsspec',
    'traitlets',
    'zarr',
    'dask'
]

[project.scripts]
hugin = "hugin.tools.cli:main"
hugin-dir-to-stac = "hugin.tools.dir_to_stac:main"

[project.urls]
"Homepage" = "https://gitlab.dev.info.uvt.ro/sage/hugin"
"Bug Tracker" = "https://gitlab.dev.info.uvt.ro/sage/hugin/-/issues"

[tool.setuptools.dynamic]
version = {attr = "hugin.__version__"}

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
